--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,21 +1,90 @@
-/* CSS DIRECTORY
-	1. =GLOBAL
-	2. =SECTIONS
-	3. =
-    4. =
-    5. =
-*/
-
-/* ===1.GLOBAL=== */
-
-* {
-    margin: 0;
+#page-1 {
+    background-color: salmon;
 }
 
-/* ===2.SECTIONS=== */
-
-.section {
-    /* text-align:center; */
-    font-size: 3em;
-    /* padding: 20px; */
+.pawpalsLogo {
+    margin-top: 30px;
+    margin-left: 40px;
+    position: absolute;
+    width:10em;
   }
+
+/*************************/
+
+/* MY PROFILE BUTTON START */
+
+#myProfileBtn {
+    background-color: white;
+    border-radius: 9px;
+    /* font-family: 'Chango', cursive*/
+    font-family: 'Open Sans Condensed', sans-serif;
+    /* font-family: 'Thasadith', sans-serif; */
+    padding: 10px 10px;
+    width: 5%;
+    margin-right: 40px;
+    margin-top: 30px;
+    border:none;
+    float: right;
+    position: relative;
+    font-size: 17px;
+    color: salmon;
+    background-image: linear-gradient(100deg, #f2dfa0 0%, #f9ca98 70%);
+    transition:all .5s ease-out;
+    background-position: 0 -10px;
+}
+
+#myProfileBtn:hover {
+    background-position: 1px -50px;
+    color:black;
+}
+
+/* MY PROFILE BUTTON ENDS */
+
+/*************************/
+
+/* CREATE PROFILE BUTTON START */
+
+#createProfileBtn {
+    background-color: lightgoldenrodyellow;
+    border-radius: 9px;
+    /* font-family: 'Chango', cursive*/
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-size: 20px;
+    /* font-family: 'Thasadith', sans-serif; */
+    padding: 10px 10px;
+    width: 12%;
+    margin-top: 750px;
+    margin-left: 43%;
+    position: relative;
+    background-image: linear-gradient(180deg, #ffe48b 0%, #da7d1afe 100%);
+    transition:all .5s ease-out;
+    background-size: 1px 100px;
+    background-position: 0 -10px;
+    border: none;
+}
+
+#createProfileBtn:hover {
+    background-position: 1px -50px;
+  }
+
+/* CREATE PROFILE BUTTON END */
+
+/*************************/
+
+/* SLOGAN START */
+
+#slogan {
+    margin-left: 1000px;
+    margin-right: 500px;
+    margin-top: -350px;
+}
+
+#slogan p {
+    font-family: 'Thasadith', sans-serif;
+    font-size: 92px;
+    color: whitesmoke;
+}
+
+/* SLOGAN END */
+
+/*************************/
