--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,22 @@
+* {
+    box-sizing: border-box;
+}
+
+/* Create-profile modal classes */
+
+.modal-next {
+    margin-top: 15px;
+    width: fit-content;
+    border-radius: 15%;
+    background-color: bisque;
+    padding: 5px;
+}
+
+.modal-next a {
+    text-decoration: none;
+    color: salmon;
+}
+
 #page-1 {
     background-color: salmon;
 }
