added profile page html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,3 +129,13 @@
 /* SLOGAN END */
 
 /*************************/
+
+/* PROFILE SECTION START */
+
+.hide {
+    display: none;
+}
+
+ul {
+    list-style-type: none;
+}
