display one image to choose based on user input

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,19 @@
 
 /* Create-profile modal classes */
 
+#create-2 .img-select {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#create-2 .img {
+    width: 320px;
+    height: 320px;
+    /* flex: 40%; */
+    /* padding: 5px; */
+}
+
 #create-3 input {
     font-size: 26px;
     font-family: 'Open Sans condensed', sans-serif;
