revised logic and styling to display fixed sized images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,9 +10,16 @@
     justify-content: center;
 }
 
-#create-2 .img {
+#create-2 .img-choice {
     width: 320px;
     height: 320px;
+    background-size: cover;
+    background-position: center;
+}
+
+#create-2 .img {
+    width: 320px;
+    max-height: 320px;
     /* flex: 40%; */
     /* padding: 5px; */
 }
@@ -23,13 +30,10 @@
 }
 
 .modal {
-    /* margin-top: 15px;
-    width: fit-content;
-    border-radius: 15%; */
+    height: fit-content;
     font-family: 'Open Sans condensed', sans-serif;
     font-size: 26px;
     background-color: bisque;
-    /* padding: 5px; */
 }
 
 .modal button {
