--- a/assets/css/hamburger.css
+++ b/assets/css/hamburger.css
@@ -113,9 +113,15 @@ bounce { 0% {
   display: inline-block;
   margin: 15px 0;
   transition: all 0.5s ease;
+  /* Pulled from bulma to match my-profile */
+  padding: .5em .75em;
 }
 
-.menu-list a:hover { color: #02D5FD; }
+.menu-list a:hover {
+  color: #02D5FD;
+  /* Pulled from bulma to match my-profile */
+  background-color: #f5f5f5;
+}
 
 .menu-overlay {
   transition: margin 300ms cubic-bezier(0.17, 0.04, 0.03, 0.94);
