--- a/assets/css/swipe.css
+++ b/assets/css/swipe.css
@@ -1,3 +1,11 @@
+:root {
+  --primary: #ffb5a7;
+  --secondary: #fcd5ce;
+  --tertiary: #f8edeb;
+  --quaternary: #f9dcc4;
+  --quinary: #fec89a;
+}
+
 html,
 body {
   width: 100%;
@@ -7,7 +15,7 @@ body {
 }
 
 #page-1 {
-  background-color: salmon !important;
+  background-color: var(--primary) !important;
 }
 
 #board {
@@ -22,28 +30,27 @@ body {
 }
 
 .card {
-  width: 320px;
-  height: 320px;
+  width: 340px;
+  height: 400px;
   position: absolute;
   top: 50%;
   left: 50%;
   border-radius: 0%;
-  background-color: white;
-  border-top: 10px solid white;
-  border-right: 10px solid white;
-  border-left: 10px solid white;
-  border-bottom: 80px solid white;
+  background-color: var(--tertiary);
   transform: translateX(-50%) translateY(-50%) scale(0.95);
-  background-size: cover;
-  background-position: center;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.1);
+  border-radius: 3%;
 }
 
 .card-frame {
-  width: 400px;
-  height: 500px;
-  border-radius: 2%;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.1);
-  background-color: white;
+  position: absolute;
+  background-size: cover;
+  background-position: center;
+  width: 320px;
+  height: 320px;
+  border-radius: 3%;
+  background-color: var(--secondary);
+  margin: 10px;
 }
 
 .name-age {
@@ -56,12 +63,11 @@ body {
 }
 
 .name {
-  bottom: 0;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 40px;
   font-weight: bold;
-  color: palevioletred;
-  text-shadow: 2px 1px papayawhip;
+  color: var(--primary);
+  text-shadow: 2px 1px var(--tertiary);
   margin-block-start: 0;
   margin-block-end: 0;
   display: flex;
@@ -72,8 +78,8 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 25px;
   font-weight: bold;
-  color: White;
-  text-shadow: 2px 1px palevioletred;
+  color: var(--tertiary);
+  text-shadow: 2px 1px var(--primary);
 }
 
 .bio {
@@ -81,6 +87,7 @@ body {
   width: 90%;
   margin-top: 70px;
   font-size: 13px;
+  color: black;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -88,8 +95,13 @@ body {
   height: 320px;
   width: 320px;
   display: flex;
-  margin-bottom: 250px;
-  font-size: 72px;
-  color: pink;
+  margin: 10%;
   background-size: cover;
+}
+
+.match-text {
+  font-size: 72px;
+  color: var(--primary);
+  text-shadow: 2px 1px var(--tertiary);
+  align-self: flex-end;
 }
