--- a/assets/css/swipe.css
+++ b/assets/css/swipe.css
@@ -22,16 +22,14 @@ body {
   width: 100%;
   height: 100%;
   position: relative;
-  overflow: hidden;
-  /* background-color: rgb(245, 247, 250); */
+  /* overflow: hidden; */
   display: flex;
-  align-items:center;
-  justify-content:flex-end;
+  /* justify-content:flex-end; */
 }
 
 .card {
   width: 340px;
-  height: 400px;
+  height: 420px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -91,17 +89,64 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+
+.heart-shape{
+  position: relative;
+  width: 250px;
+  height: 250px;
+  top: 52%;
+  left: 50%;
+  transform:  translateX(-50%) translateY(-50%) rotate(45deg);
+  background-color: var(--quinary);
+}
+.heart-shape:before,
+.heart-shape:after{
+  position: absolute;
+  width: 250px;
+  height: 250px;
+  content: '';
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -o-border-radius: 50%;
+  border-radius: 50%;
+  background-color: var(--quinary);
+  transform: translateZ(-10px);
+}
+.heart-shape:before{
+  position: absolute;
+  bottom: 0px;
+  left: -50%;
+}
+.heart-shape:after{
+  position: absolute;
+  top: -50%;
+  right: 0px;
+}
+
 .alert {
-  height: 320px;
-  width: 320px;
-  display: flex;
-  margin: 10%;
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  -webkit-transform: translate(-50%,-50%);
+  transform:  translateX(-60%) translateY(-50%) rotate(-45deg);
+  height: 250px;
+  width: 250px;
+  -moz-border-radius: 125px;
+  -webkit-boder-radius: 125px;
+  border-radius: 125px;
+  border: 5px var(--primary) solid;
   background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items:center;
+  z-index: 9999;
 }
 
 .match-text {
-  font-size: 72px;
+  position:relative;
+  font-size: 48px;
   color: var(--primary);
   text-shadow: 2px 1px var(--tertiary);
-  align-self: flex-end;
+  text-align: center;
 }
