--- a/assets/css/swipe.css
+++ b/assets/css/swipe.css
@@ -23,8 +23,7 @@ body {
   height: 100%;
   position: relative;
   /* overflow: hidden; */
-  display: flex;
-  /* justify-content:flex-end; */
+  /* display: flex; */
 }
 
 .card {
@@ -89,16 +88,27 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.animation {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  animation: pulse 2s infinite ease-out;
+}
+
+@keyframes pulse {
+  0% { transform-origin: center; transform: scale(1) rotate(45deg); }
+  50% { transform-origin: center; transform: scale(1.3) rotate(45deg); }
+  100% { transform-origin: center; transform: scale(1) rotate(45deg); }
+}
 
 .heart-shape{
-  position: relative;
+  position: absolute;
   width: 250px;
   height: 250px;
-  top: 52%;
-  left: 50%;
-  transform:  translateX(-50%) translateY(-50%) rotate(45deg);
+  transform: translateX(-50%) translateY(-50%);
   background-color: var(--quinary);
 }
+
 .heart-shape:before,
 .heart-shape:after{
   position: absolute;
@@ -110,8 +120,8 @@ body {
   -o-border-radius: 50%;
   border-radius: 50%;
   background-color: var(--quinary);
-  transform: translateZ(-10px);
 }
+
 .heart-shape:before{
   position: absolute;
   bottom: 0px;
@@ -124,7 +134,7 @@ body {
 }
 
 .alert {
-  position: absolute;
+  position: relative;
   top: 40%;
   left: 50%;
   -webkit-transform: translate(-50%,-50%);
@@ -142,6 +152,8 @@ body {
   align-items:center;
   z-index: 9999;
 }
+
+
 
 .match-text {
   position:relative;
