added min-max age logic, and cleaned up script.js

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -190,6 +190,10 @@ option {
 
 /*************************/
 
+/*****************/
+/* MEDIA QUERIES */
+/*****************/
+
 @media screen and (max-width: 576px) {
   .pawpalsLogo {
     margin-top: 15px;
