added save function

--- a/assets/css/my-profile.css
+++ b/assets/css/my-profile.css
@@ -19,6 +19,10 @@ body {
   -webkit-transition:  box-shadow .6s ease-in;
 }
 
+/* textarea {
+
+} */
+
 /* PROFILE SECTION END */
 
 /*************************/
