--- a/assets/css/matches.css
+++ b/assets/css/matches.css
@@ -21,9 +21,71 @@
   width:10em;
 }
 
+/* MATCH CARD START */
 
-/*************************/
+#board {
+  width: 10%;
+  height: 10%;
+  position: relative;
+  /* overflow: hidden; */
+  /* background-color: rgb(245, 247, 250); */
+  display: flex;
+  flex-wrap: nowrap;
+  align-items:center;
+  justify-content:flex-end;
+}
 
+.card {
+  width: 340px;
+  height: 400px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  border-radius: 0%;
+  background-color: var(--tertiary);
+  transform: translateX(-50%) translateY(-50%) scale(0.95);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.1);
+  border-radius: 3%;
+}
 
+.card-frame {
+  position: absolute;
+  background-size: cover;
+  background-position: center;
+  width: 320px;
+  height: 320px;
+  border-radius: 3%;
+  background-color: var(--secondary);
+  margin: 10px;
+}
 
-/*************************/
+.name-age {
+  position:absolute;
+  margin-left: 10px;
+  bottom: 10px;
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
+}
+
+.name {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 40px;
+  font-weight: bold;
+  color: var(--primary);
+  text-shadow: 2px 1px var(--tertiary);
+  margin-block-start: 0;
+  margin-block-end: 0;
+  display: flex;
+}
+
+.age {
+  margin-left: 10px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 25px;
+  font-weight: bold;
+  color: var(--tertiary);
+  text-shadow: 2px 1px var(--primary);
+}
+
+/* MATCH CARD END */
