--- a/assets/css/swipe.css
+++ b/assets/css/swipe.css
@@ -18,16 +18,16 @@ body {
   background-color: var(--primary) !important;
 }
 
-#board {
+/* #board {
   width: 100%;
   height: 100%;
   position: relative;
   overflow: hidden;
-  /* background-color: rgb(245, 247, 250); */
+  background-color: rgb(245, 247, 250); 
   display: flex;
   align-items:center;
   justify-content:flex-end;
-}
+} */
 
 .card {
   width: 340px;
