--- a/assets/css/my-profile.css
+++ b/assets/css/my-profile.css
@@ -46,4 +46,35 @@ body {
   filter: blur(5px);
 }
 
+.card-image {
+  position: relative;
+}
+
+.card-image #edit-img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#select-this-picture {
+  margin: 20px
+}
+
+#edit-btns-message {
+  margin: 20px;
+}
+
+#select-edit-img {
+  margin-right: 8px;
+}
+
+.message-body{
+  padding: 5px;
+  }  
+
+  .animal-image-edit {
+    margin: 20px;
+  }
+
 /* PROFILE SECTION END */
