--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -34,8 +34,14 @@ body {
     font-size: 80px;
 }
 
+.content h2:not(:first-child){
+  margin-top: 0;
+}
+
 .content p {
-    text-align: center;
+    text-align: justify;
+    font-size: 22px;
+    margin: 0 20%;
 }
 
 .cat-dog {
@@ -49,14 +55,14 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  margin: 0 10%;
+  margin: 0 20%;
 }
 
 .member {
   display: flex;
   flex-direction: column;
   text-align: center;
-  margin: 0% 0% 15% 0%;
+  margin: 0% 0% 20% 0%;
 }
 
 .member-name {
@@ -65,4 +71,63 @@ body {
   font-weight:normal;
   font-size: larger;
   background-color: gray;
+}
+
+@media (max-width: 576px) {
+
+  .content h1,.content h2 {
+    font-size: 40px;
+}
+
+  .content p {
+    font-size: 18px;
+    margin: 0 10%;
+}
+  .team-profiles {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+
+
+@media (min-width: 576px) and (max-width: 768px) {
+
+  .content h1,.content h2 {
+    font-size: 50px;
+}
+
+  .content p {
+    text-align: justify;
+    font-size: 22px;
+    margin: 0 10%;
+}
+  .team-profiles {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 0 10%;
+  }
+}
+
+@media (min-width: 768px) {
+  .content h1,.content h2 {
+    text-align: center;
+    font-family: 'Thasadith', sans-serif;
+    font-size: 80px;
+  }
+
+  .content p {
+    text-align: justify;
+    font-size: 22px;
+    margin: 0 20%;
+}
+
+.team-profiles {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin: 0 20%;
+}
+
 }
