--- a/assets/css/swipe.css
+++ b/assets/css/swipe.css
@@ -18,6 +18,13 @@ body {
   background-color: var(--primary) !important;
 }
 
+.pawpalsLogo {
+  margin-top: 30px;
+  margin-left: 35px;
+  position: absolute;
+  width: 13em;
+}
+
 #board {
   width: 100%;
   height: 100%;
@@ -128,6 +135,7 @@ body {
   bottom: 0px;
   left: -50%;
 }
+
 .heart-shape:after{
   position: absolute;
   top: -50%;
