--- a/assets/css/my-profile.css
+++ b/assets/css/my-profile.css
@@ -52,6 +52,13 @@ body {
   margin-bottom: 20px;
 }
 
+.pawpalsLogo {
+  margin-top: 30px;
+  margin-left: 40px;
+  position: absolute;
+  width:10em;
+}
+
 /* ===2.BUTTONS=== */
 
 .btns-delete {
