--- a/assets/css/matches.css
+++ b/assets/css/matches.css
@@ -10,9 +10,17 @@
   box-sizing: border-box;
 }
 
-#page-1 {
-    background-color: var(--primary) !important;
+html {
+  overflow: auto;
+  background-color: salmon;
 }
+
+body {
+  width: 100vw;
+  height: 100vh;
+  background-color: salmon;
+}
+
 
 .pawpalsLogo {
   margin-top: 30px;
@@ -23,19 +31,17 @@
 
 /* MATCH CARD START */
 
-#board {
-  width: 10%;
-  height: 10%;
+/* #board {
+  height: 100%;
   position: relative;
-  /* overflow: hidden; */
-  /* background-color: rgb(245, 247, 250); */
+  overflow: hidden;
   display: flex;
-  flex-wrap: nowrap;
-  align-items:center;
-  justify-content:flex-end;
-}
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-around;
+} */
 
-.card {
+/* .card {
   width: 340px;
   height: 400px;
   position: absolute;
@@ -46,8 +52,31 @@
   transform: translateX(-50%) translateY(-50%) scale(0.95);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.1);
   border-radius: 3%;
+} */
+
+.columns {
+  display: flex;
+  justify-content: space-around;
 }
 
+.column {
+  margin-left: 30%;
+}
+
+.card {
+  max-width: 40%;
+  position: relative;
+  margin-top: 100px;
+}
+
+h1 {
+  font-size: 6rem !important;
+  text-align: center;
+}
+
+
+
+/* 
 .card-frame {
   position: absolute;
   background-size: cover;
@@ -85,7 +114,14 @@
   font-size: 25px;
   font-weight: bold;
   color: var(--tertiary);
-  text-shadow: 2px 1px var(--primary);
-}
+  text-shadow: 2px 1px var(--primary); 
+} */
 
 /* MATCH CARD END */
+
+/* .columns img {
+  width:  300px;
+  height: 300px;
+  object-fit: cover;
+  display: inline-block;
+} */
