changed background color back to salmon on all pages

--- a/assets/css/contact-us.css
+++ b/assets/css/contact-us.css
@@ -1,5 +1,5 @@
 :root {
-    --primary: #ffb5a7;
+    --primary: salmon;
     --secondary: #fcd5ce;
     --tertiary: #f8edeb;
     --quaternary: #f9dcc4;
