--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,28 +100,28 @@ option {
 /* MY PROFILE BUTTON START */
 
 #loginBtn {
-  background-color: white;
+  background-color: lightgoldenrodyellow;
   border-radius: 9px;
   /* font-family: 'Chango', cursive*/
   font-family: 'Open Sans Condensed', sans-serif;
+  font-size: 20px;
   /* font-family: 'Thasadith', sans-serif; */
-  padding: 10px 10px;
+  padding: 10px 30px;
   width: fit-content;
-  margin-right: 40px;
-  margin-top: 30px;
-  border: none;
-  float: right;
+  margin-top: 3%;
+  margin-right: 3%;
   position: relative;
-  font-size: 17px;
-  color: salmon;
-  background-image: linear-gradient(100deg, #f2dfa0 0%, #f9ca98 70%);
+  float: right;
+  background-image: linear-gradient(180deg, #ffe48b 0%, #da7d1afe 100%);
   transition:all .5s ease-out;
+  background-size: 1px 100px;
   background-position: 0 -10px;
+  border: none;
 }
 
 #loginBtn:hover {
   background-position: 1px -50px;
-  color:black;
+  /* color:black; */
 }
 
 /* MY PROFILE BUTTON ENDS */
@@ -147,6 +147,7 @@ option {
   background-size: 1px 100px;
   background-position: 0 -10px;
   border: none;
+  
 }
 
 #createProfileBtn:hover {
