--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -86,7 +86,10 @@ body {
 
 #member2 {
   object-fit: cover;
-  
+}
+
+#member4 {
+  background-image: url("https://fsb.zobj.net/crop.php?r=_B1r1qf0g8qGyMHPeAUnkapEF_eUrzjSQ-TJodDLqaacV-PxPe6HXHeGXJf1p4fCH_O1_Lmq7A1EhjxNVybOxXUpBWI6ciqJfpxgw0L_zngCSOq5Hljhzy_TP6e2g6oRzDyH3zNZLJIB8rOs");
 }
 
 @media (max-width: 576px) {
