--- a/assets/css/swipe.css
+++ b/assets/css/swipe.css
@@ -38,6 +38,8 @@ body {
   width: 340px;
   height: 420px;
   position: absolute;
+  display: flex;
+  justify-content: center;
   top: 50%;
   left: 50%;
   border-radius: 0%;
@@ -162,12 +164,68 @@ body {
   z-index: 9999;
 }
 
-
-
 .match-text {
   position:relative;
   font-size: 48px;
   color: var(--primary);
   text-shadow: 2px 1px var(--tertiary);
   text-align: center;
+}
+
+/*****************/
+/* MEDIA QUERIES */
+/*****************/
+
+@media screen and (max-width: 576px) {
+  .pawpalsLogo {
+    margin-top: 15px;
+    margin-left: 15px;
+    width: 11em;
+  }
+
+  .hamburger-menu-wrapper {
+    margin-top: 12px;
+    margin-right: 12px;
+    padding: 5px;
+  }
+
+  .hamburger-menu {
+    width: 30px;
+    height: 30px;
+  }
+
+  .hamburger-menu span {
+    display: block;
+    position: absolute;
+    top: 14px;
+    left: 5px;
+    right: 5px;
+    height: 2px;
+    background: #fec89a;
+  }
+
+  .card {
+    width: 225px;
+    height: 350px;
+    top: 45%;
+  }
+
+  .card-frame {
+    width: 205px;
+    height: 205px;
+  }
+
+  .name {
+    font-size: 30px;
+  }
+
+  .bio {
+    margin-top: 60px;
+    width: 82%;
+  }
+
+  .heart-shape, .heart-shape:before,.heart-shape:after, .alert {
+    width: 170px;
+    height: 170px;
+  }
 }
