--- a/assets/css/swipe.css
+++ b/assets/css/swipe.css
@@ -18,12 +18,14 @@ body {
   background-color: var(--primary) !important;
 }
 
+/*********************/
+/* CAROUSEL ELEMENTS */
+/*********************/
+
 #board {
   width: 100%;
   height: 100%;
   position: relative;
-  /* overflow: hidden; */
-  /* display: flex; */
 }
 
 
@@ -41,6 +43,10 @@ body {
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.1);
   border-radius: 3%;
 }
+
+/*****************/
+/* CARD ELEMENTS */
+/*****************/
 
 .card-frame {
   position: absolute;
@@ -90,6 +96,10 @@ body {
   color: black;
   font-family: Arial, Helvetica, sans-serif;
 }
+
+/*******************/
+/* MATCH ANIMATION */
+/*******************/
 
 .animation {
   position: absolute;
