--- a/assets/css/matches.css
+++ b/assets/css/matches.css
@@ -22,12 +22,12 @@ body {
 }
 
 
-.pawpalsLogo {
+/* .pawpalsLogo {
   margin-top: 30px;
   margin-left: 40px;
   position: absolute;
   width:10em;
-}
+} */
 
 /* MATCH CARD START */
 
