--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -21,12 +21,12 @@ body {
     background-color: var(--primary);
   }
 
-.pawpalsLogo {
+/* .pawpalsLogo {
   margin-top: 30px;
   margin-left: 40px;
   position: absolute;
   width:10em;
-}
+} */
 
 .content h1,.content h2 {
     text-align: center;
