--- a/assets/css/contact-us.css
+++ b/assets/css/contact-us.css
@@ -16,12 +16,12 @@ body {
     background-color: var(--primary);
   }
 
-.pawpalsLogo {
+/* .pawpalsLogo {
   margin-top: 30px;
   margin-left: 40px;
   position: absolute;
   width:10em;
-}
+} */
 
 /* MESSAGE BOX */
 
