--- a/assets/css/my-profile.css
+++ b/assets/css/my-profile.css
@@ -52,12 +52,12 @@ body {
   margin-bottom: 20px;
 }
 
-.pawpalsLogo {
+/* .pawpalsLogo {
   margin-top: 30px;
   margin-left: 40px;
   position: absolute;
   width:10em;
-}
+} */
 
 /* ===2.BUTTONS=== */
 
