--- a/assets/css/swipe.css
+++ b/assets/css/swipe.css
@@ -28,12 +28,12 @@ body {
   position: relative;
 }
 
-.pawpalsLogo {
+/* .pawpalsLogo {
   margin-top: 30px;
   margin-left: 40px;
   position: absolute;
   width:10em;
-}
+} */
 
 .card {
   width: 340px;
