got header playing well with every page

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -47,6 +47,7 @@ html, body {
 .team-profiles {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-around;
   margin: 0 20%;
 }
