--- a/assets/css/my-profile.css
+++ b/assets/css/my-profile.css
@@ -8,15 +8,15 @@
 
 /* ===1.GLOBAL=== */
 
-html {
-  overflow: auto;
+html, body {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
   background-color: salmon;
 }
 
 body {
-  width: 100vw;
-  height: 100vh;
-  
+  overflow-y: auto;
 }
 
 .hide {
