fixed margins for form and container

--- a/assets/css/contact-us.css
+++ b/assets/css/contact-us.css
@@ -26,7 +26,7 @@ body {
 /*******************/
 
 .container {
-  margin: 20px 0px;
+  margin: 20px auto 20px auto;
 }
 
 .contact-title {
@@ -34,7 +34,7 @@ body {
   font-family: 'Thasadith', sans-serif;
   color: whitesmoke;
   font-size: 68px;
-  margin-bottom: 20px
+  margin-bottom: 20px;
 }
 
 .contact-us-form {
