--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,7 +79,7 @@ select {
   margin-top: 30px;
   margin-left: 35px;
   position: absolute;
-  width: 13em;
+  width: 208px;
 }
 
 #slogan {
@@ -108,14 +108,12 @@ select {
 #loginBtn {
   background-color: lightgoldenrodyellow;
   border-radius: 9px;
-  /* font-family: 'Chango', cursive*/
   font-family: 'Open Sans Condensed', sans-serif;
   font-size: 20px;
-  /* font-family: 'Thasadith', sans-serif; */
   padding: 10px 30px;
   width: fit-content;
-  margin-top: 3%;
-  margin-right: 3%;
+  margin-top: 30px;
+  margin-right: 35px;
   position: relative;
   float: right;
   background-image: linear-gradient(180deg, #ffe48b 0%, #da7d1afe 100%);
@@ -127,7 +125,6 @@ select {
 
 #loginBtn:hover {
   background-position: 1px -50px;
-  /* color:black; */
 }
 
 /* MY PROFILE BUTTON ENDS */
@@ -139,13 +136,10 @@ select {
 #createProfileBtn {
   background-color: lightgoldenrodyellow;
   border-radius: 9px;
-  /* font-family: 'Chango', cursive; */
   font-family: 'Open Sans Condensed', sans-serif;
   font-size: 25px;
-  /* font-family: 'Thasadith', sans-serif; */
   padding: 10px 30px;
   width: fit-content;
-  /* position: relative; */
   background-image: linear-gradient(180deg, #ffe48b 0%, #da7d1afe 100%);
   transition: all .5s ease-out;
   background-size: 1px 100px;
@@ -166,7 +160,7 @@ select {
     margin-top: 15px;
     margin-left: 15px;
     position: absolute;
-    width: 11em;
+    width: 176px;
   }
 
   .modal {
