--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -57,6 +57,7 @@ html, body {
   flex-direction: column;
   text-align: center;
   margin: 0% 0% 20% 0%;
+  width: fit-content;
 }
 
 .member-name {
@@ -74,24 +75,25 @@ html, body {
   background-size: cover;
 }
 
-#member1 {
+/* #member1 {
   background-image: url("https://i.redd.it/ipa9hrvqenwy.jpg");
-}
+} */
 
-#member2 {
+#member {
   object-fit: cover;
+  
 }
 
-#member4 {
+/* #member4 {
   background-image: url("https://fsb.zobj.net/crop.php?r=_B1r1qf0g8qGyMHPeAUnkapEF_eUrzjSQ-TJodDLqaacV-PxPe6HXHeGXJf1p4fCH_O1_Lmq7A1EhjxNVybOxXUpBWI6ciqJfpxgw0L_zngCSOq5Hljhzy_TP6e2g6oRzDyH3zNZLJIB8rOs");
-}
+} */
 
 @media screen and (max-width: 576px) {
 
-  .photo {
+  /* .photo {
     width: 192px;
     height: 192px;
-  }
+  } */
 
   .content h1,.content h2 {
     font-size: 40px;
@@ -109,7 +111,7 @@ html, body {
 
 
 
-@media (min-width: 576px) and (max-width: 768px) {
+@media screen and (min-width: 576px) and (max-width: 768px) {
 
   .content h1,.content h2 {
     font-size: 50px;
@@ -123,9 +125,12 @@ html, body {
   .team-profiles {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     margin: 0 10%;
   }
+
+  /* .member {
+    width: fit-content;
+  } */
 }
 
 @media (min-width: 768px) {
